--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
+    "react-spinners": "^0.9.0",
     "redux": "^4.0.5",
     "typescript": "^3.9.6"
   },
