--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "beauty-stars": "^1.1.0",
     "cloudinary-core": "^2.10.3",
     "cloudinary-react": "^1.6.1",
     "prettier": "^2.0.5",
@@ -16,7 +17,10 @@
     "react-facebook-login": "^4.1.1",
     "react-google-login": "^5.1.21",
     "react-icons": "^3.10.0",
+    "react-loading-skeleton": "^2.1.1",
+    "react-rating": "^2.0.5",
     "react-redux": "^7.2.0",
+    "react-render-html": "^0.6.0",
     "react-router-bootstrap": "^0.25.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
