--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "@types/youtube": "0.0.39",
     "axios": "^0.19.2",
     "beauty-stars": "^1.1.0",
     "cloudinary-core": "^2.10.3",
@@ -26,7 +27,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-spinners": "^0.9.0",
-    "react-youtube": "^7.11.2",
+    "react-youtube": "^7.11.3",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
